@@ -119,6 +119,8 @@ int mqtt3_bridge_new(mosquitto_db *db, struct _mqtt3_bridge *bridge)
 	new_context->username = new_context->bridge->username;
 	new_context->password = new_context->bridge->password;
 
+	bridge->try_private_accepted = true;
+
 	return mqtt3_bridge_connect(db, new_context);
 }
 
